@@ -1,3 +1,4 @@
+* Protect trusted devices against brute force attack
 * Eager load Function field with same multiple getter
 
 Version 5.6.3 - 2020-07-01
